# DicomParser-3

./: .gitignore  CMakeLists.txt  setup.py
src/: main.cpp
