cmake_minimum_required(VERSION 3.0)
project(dicom_parse)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
add_subdirectory(pybind11)
find_package(JPEG REQUIRED)
include_directories(${JPEG_INCLUDE_DIR})
link_directories(${JPEG_LIBRARIES})
include_directories("./pybind11/include")
pybind11_add_module(dicom_parse src/main.cpp)
target_link_libraries(dicom_parse PRIVATE ${JPEG_LIBRARIES})